# ctxmem

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.ctxmem/: config.json  memory.jsonl
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: lint.yml  publish.yml  publish.yml.disabled  test.yml
docs/: ARCHITECTURE.md  GUIDE.md
example/: bench_questions_django.txt  sample_app.py
example/bench/: report.md
ollama/: Taskfile.yaml  lima.yaml
scripts/: demo.sh  record-demo.sh  release.sh
src/ctxmem/: __init__.py  bench.py  cli.py  codemap.py  embeddings.py  gitinfo.py  indexer.py  mcp_server.py  retrieval.py  store.py
tests/: test_cli.py  test_embeddings.py  test_indexer.py  test_integration_ollama.py  test_store_retrieval.py
